--- a/YoutubeAPI/src/app/navbar/navbar.component.css
+++ b/YoutubeAPI/src/app/navbar/navbar.component.css
@@ -1,27 +1,101 @@
 nav {
-    background-color: #333;
+    background-color: #ffffff;
     padding: 1rem;
-  }
+}
   
-  nav ul {
+.nav-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap; 
+}
+  
+.logo {
+    width: 200px; 
+}
+  
+.center {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+  
+nav ul {
     list-style: none;
     display: flex;
-    justify-content: space-around;
     margin: 0;
     padding: 0;
-  }
+}
   
-  nav ul li {
-    display: inline;
-  }
+nav ul li {
+    margin: 0 10px;
+}
   
-  nav ul li a {
-    color: white;
+nav ul li a {
+    color: black;
+    text-decoration: none;
+    font-size: 30px;
+    font-family: Roboto;
+    font-weight: bold;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 10px 20px; /* Add padding for larger hover area */
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+  
+nav ul li a:hover {
+    background-color: #b9b9b9;
+    border-radius: 20px;
+}
+  
+nav ul li a.active-link {
+    background-color: #d3d3d3; /* Color for the active link */
+    color: Black; 
+    border-radius: 20px;
+}
+  
+.right {
+    display: flex;
+    font-size: 30px;
+    align-items: center;
+    font-family: Roboto;
+    font-weight: bold;
+}
+  
+.right a {
+    color: black;
     text-decoration: none;
     padding: 0.5rem 1rem;
-  }
+}
   
-  nav ul li a:hover {
+.right a:hover {
     background-color: #555;
-  }
+}
   
+@media (max-width: 430px) {
+    .nav-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+  
+    .center, .right {
+        width: 100%;
+        justify-content: flex-start;
+    }
+  
+    .center ul, .right {
+        display: block;
+    }
+  
+    nav ul li {
+        margin: 10px 0;
+    }
+  
+    .logo {
+        width: 150px; /* Adjust the size of the logo for smaller screens */
+    }
+  
+    nav ul li a, .right li {
+        font-size: 18px; /* Further adjust font size for smaller screens */
+    }
+}
