--- a/YoutubeAPI/src/app/navbar/navbar.component.html
+++ b/YoutubeAPI/src/app/navbar/navbar.component.html
@@ -1,8 +1,17 @@
 <nav>
-    <ul>
-      <li><a routerLink="/">Home</a></li>
-      <li><a routerLink="/top-videos">Top Videos</a></li>
-      <!-- Add more links as needed -->
-    </ul>
-  </nav>
-  
+    <div class="nav-container">
+        <div class="left">
+            <img src="/assets/images/YouTubeLogo.png" alt="YouTube Logo" class="logo">
+        </div>
+        <div class="center">
+            <ul>
+                <li><a routerLink="/home" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
+                <li><a routerLink="/top-videos" routerLinkActive="active-link">Top Videos</a></li>
+                <!-- Add more links as needed -->
+            </ul>
+        </div>
+        <div class="right">
+            <p>Teerapat W.</p>
+        </div>
+    </div>
+</nav>
