--- a/YoutubeAPI/src/app/navbar/navbar.component.css
+++ b/YoutubeAPI/src/app/navbar/navbar.component.css
@@ -70,6 +70,7 @@ nav ul li a.active-link {
   
 .right a:hover {
     background-color: #555;
+    border-radius: 20px;
 }
   
 @media (max-width: 430px) {
