--- a/YoutubeAPI/src/app/navbar/navbar.component.html
+++ b/YoutubeAPI/src/app/navbar/navbar.component.html
@@ -1,12 +1,14 @@
 <nav>
     <div class="nav-container">
         <div class="left">
-            <img src="/assets/images/YouTubeLogo.png" alt="YouTube Logo" class="logo">
-        </div>
+            <a href="https://www.youtube.com" target="_blank">
+                <img src="/assets/images/YouTubeLogo.png" alt="YouTube Logo" class="logo">
+            </a>
+        </div>        
         <div class="center">
             <ul>
                 <li><a routerLink="/home" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
-                <li><a routerLink="/top-videos" routerLinkActive="active-link">Top Videos</a></li>
+                <li><a routerLink="/top-videos" routerLinkActive="active-link">Top Videos in Thailand</a></li>
                 <!-- Add more links as needed -->
             </ul>
         </div>
