--- a/YoutubeAPI/src/app/home/home.component.html
+++ b/YoutubeAPI/src/app/home/home.component.html
@@ -1,16 +1,18 @@
-<app-navbar></app-navbar>
+<div [@fadeInOut]> 
+    <app-navbar></app-navbar>
 
-<div *ngIf="topVideos.length">
-    <div class="title">
-        <p class="title-text">Top 10 Videos Trending Worldwide</p>
-    </div>
+    <div *ngIf="topVideos.length">
+        <div class="title">
+            <p class="title-text">Top 10 Videos Trending Worldwide</p>
+        </div>
 
-    <div class="videos">
-        <div class="video-item" *ngFor="let video of topVideos">
-            <h3 class="videoTitle">{{ video.snippet.title }}</h3>
-            <a [href]="'https://www.youtube.com/watch?v=' + video.id" target="_blank">
-                <img [src]="video.snippet.thumbnails.high.url" alt="{{ video.snippet.title }}">
-            </a>
+        <div class="videos">
+            <div class="video-item" *ngFor="let video of topVideos">
+                <a [href]="'https://www.youtube.com/watch?v=' + video.id" target="_blank">
+                    <h3 class="videoTitle">{{ video.snippet.title }}</h3>
+                    <img [src]="video.snippet.thumbnails.high.url" alt="{{ video.snippet.title }}">
+                </a>
+            </div>
         </div>
     </div>
 </div>
