--- a/YoutubeAPI/src/app/navbar/navbar.component.css
+++ b/YoutubeAPI/src/app/navbar/navbar.component.css
@@ -2,35 +2,35 @@ nav {
     background-color: #ffffff;
     padding: 1rem;
 }
-  
+
 .nav-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap; 
 }
-  
+
 .logo {
     width: 200px; 
 }
-  
+
 .center {
     flex: 1;
     display: flex;
     justify-content: center;
 }
-  
+
 nav ul {
     list-style: none;
     display: flex;
     margin: 0;
     padding: 0;
 }
-  
+
 nav ul li {
     margin: 0 10px;
 }
-  
+
 nav ul li a {
     color: black;
     text-decoration: none;
@@ -39,21 +39,21 @@ nav ul li a {
     font-weight: bold;
     margin-left: 50px;
     margin-right: 50px;
-    padding: 10px 20px; /* Add padding for larger hover area */
+    padding: 10px 20px; 
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
-  
+
 nav ul li a:hover {
     background-color: #b9b9b9;
     border-radius: 20px;
 }
-  
+
 nav ul li a.active-link {
-    background-color: #d3d3d3; /* Color for the active link */
+    background-color: #d3d3d3; 
     color: Black; 
     border-radius: 20px;
 }
-  
+
 .right {
     display: flex;
     font-size: 30px;
@@ -61,18 +61,51 @@ nav ul li a.active-link {
     font-family: Roboto;
     font-weight: bold;
 }
-  
+
 .right a {
     color: black;
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
-  
+
 .right a:hover {
     background-color: #555;
     border-radius: 20px;
 }
 
+
+.burger-menu {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.burger-menu .bar {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 4px 0;
+    transition: transform 0.3s, opacity 0.3s;
+}
+
+.burger-menu.change .bar1 {
+    transform: rotate(-45deg) translate(-10.5px, 10.5px);
+}
+
+.burger-menu.change .bar2 {
+    opacity: 0;
+}
+
+.burger-menu.change .bar3 {
+    transform: rotate(45deg) translate(-4px, -4px);
+}
+
+.dropdown-menu {
+    display: none;
+}
+
+/* Media Queries */
 @media (max-width: 1097px) {
     .right {
         display: none;
@@ -87,4 +120,59 @@ nav ul li a.active-link {
     .right {
         display: none;
     }
+
+    .dropdown-menu {
+        display: none; /* Initially hidden */
+    }
 }
+
+@media (max-width: 934px) {
+    .burger-menu {
+        display: flex;
+    }
+
+    .dropdown-menu {
+        display: none; /* Initially hidden */
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.5s ease;
+    }
+
+    .dropdown-menu.show {
+        display: block; /* Enable display */
+        max-height: 500px; /* Adjust as necessary */
+    }
+}
+
+.dropdown-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: #efefef;
+    border-radius: 15px;
+    margin-bottom: 10px;
+}
+
+.dropdown-menu ul li {
+    padding: 10px;
+    text-align: center;
+}
+
+.dropdown-menu ul li a {
+    color: black;
+    text-decoration: none;
+    font-size: 25px;
+    font-family: Roboto;
+
+    display: block;
+    width: 100%;
+    transition: background-color 0.3s ease;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+.dropdown-menu ul li a:hover {
+    background-color: #b9b9b9;
+}
+
+
