--- a/YoutubeAPI/src/app/navbar/navbar.component.css
+++ b/YoutubeAPI/src/app/navbar/navbar.component.css
@@ -14,6 +14,11 @@ nav {
     width: 200px; 
 }
 
+.logo:hover {
+    opacity: 50%;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
 .center {
     flex: 1;
     display: flex;
