--- a/YoutubeAPI/src/app/home/home.component.css
+++ b/YoutubeAPI/src/app/home/home.component.css
@@ -1,76 +1,112 @@
-.title {
-    background-color: rgb(255, 0, 0);
-    font-family: Roboto;
-    font-weight: bold;
-    padding: 10px;
-    margin-bottom: 2%;
-}
-
-.title-text {
-    font-size: 40px;
-    font-family: Roboto;
-    color: white;
-    margin: 0;
-    text-align: center;
-}
-
-.videoTitle {
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 24px;
-    margin: 10px 0;
-    text-align: center; 
-    display: -webkit-box;
-    -webkit-line-clamp: 2; 
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-height: 3em; 
-}
-
-.videos {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px; 
-    padding: 0 10px; 
-}
-
-.video-item {
+.outer-container {
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    justify-content: flex-end; 
-    text-align: center; 
-    height: 100%; 
+    height: 100vh; 
 }
 
-img {
-    width: 100%; 
-    height: auto; 
-    max-width: 300px; 
+.header {
+    flex: 0 0 auto; 
+    background-color: rgb(255, 228, 228);
+    padding: 10px;
 }
 
-/* Responsive */
-@media (max-width: 1400px) {
-    .videos {
-        grid-template-columns: repeat(4, 1fr); 
-    }
+.youtubeLogo2 {
+    width: 100px;
+    margin-top: 20px;
 }
 
-@media (max-width: 1000px) {
-    .videos {
-        grid-template-columns: repeat(3, 1fr); 
-    }
+.body {
+    flex: 1; 
+    padding: 10px;
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(255, 228, 228);
+    font-family: Roboto;
 }
 
-@media (max-width: 800px) {
-    .videos {
-        grid-template-columns: repeat(2, 1fr); 
-    }
+.inner-body {
+    padding: 10px;
 }
 
-@media (max-width: 600px) {
-    .videos {
-        grid-template-columns: 1fr; 
-    }
+.center-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.inner-center {
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 5%;
+}
+
+.divCenter {
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    width: 200%;
+    background-color: white;
+}
+
+.bottom {
+    flex: 0 0 auto; 
+    background-color: rgb(255, 228, 228);
+    padding: 10px;
+}
+
+.divLogin {
+    justify-content: center;
+    text-align: center;
+    margin-top: 7%;
+}
+
+.form-label {
+    
+}
+
+.form-control {
+    width: 200px;
+    height: 20px;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.loginTitle {
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 10%;
+}
+
+.loginEmail,
+.loginPassword {
+    width: 95%;
+    margin-left: 27%;
+    margin-right: 3%;
+    margin-bottom: 5%;
+    font-weight: bold;
+}
+
+.loginButton {
+    justify-content: center;
+    text-align: center;
+    font-size: 130%;
+    background-color: #2196F3;
+    color: white;
+    border: transparent;
+    border-radius: 5px;
+    height: 40px;
+    width: 46%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.loginButton:hover {
+    opacity: 50%;
+}
+
+.error-message {
+    color: red;
+    font-size: 0.9em;
 }
