updated auth guard and local storage

--- a/YoutubeAPI/src/app/home/home.component.css
+++ b/YoutubeAPI/src/app/home/home.component.css
@@ -63,7 +63,7 @@
 }
 
 .form-label {
-    
+
 }
 
 .form-control {
@@ -107,6 +107,7 @@
 }
 
 .error-message {
-    color: red;
-    font-size: 0.9em;
+  color: red;
+  font-size: 0.9em;
+  margin-top: 5px;
 }
