--- a/YoutubeAPI/src/app/home/home.component.html
+++ b/YoutubeAPI/src/app/home/home.component.html
@@ -1,11 +1,8 @@
 <div class="outer-container">
-    <div class="header">
-      <!-- Header content -->
-    </div>
+    <div class="header"></div>
+
     <div class="body">
-      <div class="inner-body">
-        <!-- Inner body content -->
-      </div>
+      <div class="inner-body"></div>
       <div class="center-content">
         <div class="divCenter">
           <div class="inner-center">
@@ -17,11 +14,30 @@
             </div>
             <div class="loginEmail">
               <label for="email" class="form-label">Email</label> <br>
-              <input type="email" class="form-control" id="email" #emailInput>
+              <input 
+                type="email" 
+                class="form-control" 
+                id="email" 
+                #emailInput 
+                (focus)="removeEmptyClass(emailInput)" 
+                (keypress)="handleKeyPress($event, emailInput)"
+              >
+              <span class="error-message" *ngIf="isEmailEmpty && !emailInput.value"><br>Please fill in your email</span>
+              <span class="error-message" *ngIf="!isEmailEmpty && emailInput.value && !isValidEmail(emailInput.value)">
+                Please enter a valid email address
+              </span>
             </div>
             <div class="loginPassword">
               <label for="password" class="form-label">Password</label> <br>
-              <input type="password" class="form-control" id="password" #passwordInput>
+              <input 
+                type="password" 
+                class="form-control" 
+                id="password" 
+                #passwordInput
+                (focus)="removeEmptyClass(passwordInput)"
+                (keypress)="handleKeyPress($event, passwordInput)"
+              >
+              <span class="error-message" *ngIf="isPasswordEmpty && !passwordInput.value"><br>Please fill in your password</span>
             </div>
             <div class="divLogin">
               <button class="loginButton" (click)="onLogin()">Login</button>
@@ -32,7 +48,8 @@
       <div class="inner-body">
       </div>
     </div>
-    <div class="bottom">
-    </div>
+
+    <div class="bottom"></div>
+
   </div>
   
