--- a/YoutubeAPI/src/app/navbar/navbar.component.html
+++ b/YoutubeAPI/src/app/navbar/navbar.component.html
@@ -25,5 +25,6 @@
         <li><a routerLink="/home" routerLinkActive="active-link" [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
         <li><a routerLink="/top-videos" routerLinkActive="active-link">Top Videos in Thailand</a></li>
         <li><a routerLink="/top-videos-worldwide" routerLinkActive="active-link">Top Videos Worldwide</a></li>
+        <li><a (click)="logout()" class="logoutText">Logout</a></li>
     </ul>
 </div>
