--- a/YoutubeAPI/src/app/navbar/navbar.component.html
+++ b/YoutubeAPI/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav>
     <div class="nav-container">
         <div class="left">
-            <a routerLink="/home">
+            <a href="https://www.youtube.com" target="_blank">
                 <img src="/assets/images/YouTubeLogo.png" alt="YouTube Logo" class="logo">
-            </a>            
+            </a>                        
         </div>        
         <div class="center">
             <ul>
