--- a/YoutubeAPI/src/app/top-videos-worldwide/top-videos-worldwide.component.css
+++ b/YoutubeAPI/src/app/top-videos-worldwide/top-videos-worldwide.component.css
@@ -74,3 +74,9 @@ img {
         grid-template-columns: 1fr; 
     }
 }
+
+@media (max-width: 430px) {
+    .title-text {
+        font-size: 20px;
+    }
+}
