--- a/YoutubeAPI/src/app/top-videos/top-videos.component.css
+++ b/YoutubeAPI/src/app/top-videos/top-videos.component.css
@@ -75,3 +75,9 @@ img {
         grid-template-columns: 1fr; 
     }
 }
+
+@media (max-width: 430px) {
+    .title-text {
+        font-size: 20px;
+    }
+}
