--- a/YoutubeAPI/src/app/home/home.component.css
+++ b/YoutubeAPI/src/app/home/home.component.css
@@ -6,7 +6,7 @@
 
 .header {
     flex: 0 0 auto; 
-    background-color: rgb(255, 228, 228);
+    /* background-color: rgb(255, 228, 228); */
     padding: 10px;
 }
 
@@ -20,7 +20,7 @@
     padding: 10px;
     display: flex;
     justify-content: space-around;
-    background-color: rgb(255, 228, 228);
+    /* background-color: rgb(255, 228, 228); */
     font-family: Roboto;
 }
 
@@ -43,7 +43,7 @@
 }
 
 .divCenter {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius: 10px;
     padding: 10px;
     width: 200%;
@@ -52,7 +52,7 @@
 
 .bottom {
     flex: 0 0 auto; 
-    background-color: rgb(255, 228, 228);
+    /* background-color: rgb(255, 228, 228); */
     padding: 10px;
 }
 
