--- a/YoutubeAPI/src/app/home/home.component.html
+++ b/YoutubeAPI/src/app/home/home.component.html
@@ -1,55 +1,55 @@
+<!-- home.component.html -->
 <div class="outer-container">
-    <div class="header"></div>
+  <div class="header"></div>
 
-    <div class="body">
-      <div class="inner-body"></div>
-      <div class="center-content">
-        <div class="divCenter">
-          <div class="inner-center">
-            <img src="/assets/images/YouTubeLogo2.png" class="youtubeLogo2">
+  <div class="body">
+    <div class="inner-body"></div>
+    <div class="center-content">
+      <div class="divCenter">
+        <div class="inner-center">
+          <img src="/assets/images/YouTubeLogo2.png" class="youtubeLogo2">
+        </div>
+        <div>
+          <div class="loginTitle">
+            <h2>Login to YouTube</h2>
           </div>
-          <div>
-            <div class="loginTitle">
-              <h2>Login to YouTube</h2>
-            </div>
-            <div class="loginEmail">
-              <label for="email" class="form-label">Email</label> <br>
-              <input 
-                type="email" 
-                class="form-control" 
-                id="email" 
-                #emailInput 
-                (focus)="removeEmptyClass(emailInput)" 
-                (keypress)="handleKeyPress($event, emailInput)"
-              >
-              <span class="error-message" *ngIf="isEmailEmpty && !emailInput.value"><br>Please fill in your email</span>
-              <span class="error-message" *ngIf="!isEmailEmpty && emailInput.value && !isValidEmail(emailInput.value)">
-                <br>Please enter a valid email address
-              </span>
-            </div>
-            <div class="loginPassword">
-              <label for="password" class="form-label">Password</label> <br>
-              <input 
-                type="password" 
-                class="form-control" 
-                id="password" 
-                #passwordInput
-                (focus)="removeEmptyClass(passwordInput)"
-                (keypress)="handleKeyPress($event, passwordInput)"
-              >
-              <span class="error-message" *ngIf="isPasswordEmpty && !passwordInput.value"><br>Please fill in your password</span>
-            </div>
-            <div class="divLogin">
-              <button class="loginButton" (click)="onLogin()">Login</button>
-            </div>
+          <div class="loginEmail">
+            <label for="email" class="form-label">Email</label> <br>
+            <input 
+              type="email" 
+              class="form-control" 
+              id="email" 
+              [(ngModel)]="email"
+              #emailInput
+              (focus)="removeEmptyClass(emailInput)" 
+              (keypress)="handleKeyPress($event, emailInput)"
+            >
+            <span class="error-message" *ngIf="isEmailEmpty && !email"><br>Please fill in your email</span>
+            <span class="error-message" *ngIf="!isEmailEmpty && email && !isValidEmail(email)">
+              <br>Please enter a valid email address
+            </span>
+          </div>
+          <div class="loginPassword">
+            <label for="password" class="form-label">Password</label> <br>
+            <input 
+              type="password" 
+              class="form-control" 
+              id="password" 
+              [(ngModel)]="password"
+              #passwordInput
+              (focus)="removeEmptyClass(passwordInput)"
+              (keypress)="handleKeyPress($event, passwordInput)"
+            >
+            <span class="error-message" *ngIf="isPasswordEmpty && !password"><br>Please fill in your password</span>
+          </div>
+          <div class="divLogin">
+            <button class="loginButton" (click)="onLogin()">Login</button>
           </div>
         </div>
       </div>
-      <div class="inner-body">
-      </div>
     </div>
-
-    <div class="bottom"></div>
-
+    <div class="inner-body"></div>
   </div>
-  
+
+  <div class="bottom"></div>
+</div>
